--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/anubis.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- PREVISUALITATION -->
+    <meta property="og:title" content="Profynus" />
+    <meta property="og:description" content="Website to download, listen and explore new music free we have everything for you." />
+    <meta property="og:image" content="https://dwp-frontend-profynus.vercel.app/neonsoundwave.jpg" />
+    <meta property="og:url" content="https://dwp-frontend-profynus.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <!-- TWITTER PREVIEWS -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Profynus" />
+    <meta name="twitter:description" content="Website to download, listen and explore new music free we have everything for you." />
+    <meta name="twitter:image" content="https://dwp-frontend-profynus.vercel.app/neonsoundwave.jpg" />
+
     <title>Profynus</title>
   </head>
   <body>
